less/draw.less
@import "reset";

@import "css/bootstrap.min.css";
@import "css/font-awesome.css";

@import "elements";
@import "draw-icon";

/* bootstrap & font awesome tweaks */

[class^="icon-"], [class*=" icon-"] {
	background-image: none;
}

.dropdown-menu li > a{
	padding:6px 15px;
}
.btn-group + .btn-group{
	margin-left:10px;
}
.btn{
	i{ color:#555; }
	&.btn-primary i { color:white }

	padding:8px 15px;

	&:focus{
		outline:none;
	}
	[class^="icon-"], [class*=" icon-"] {
		vertical-align: bottom;
	}
}

/* App Stuffs */

@back: #222;
@active: #0056aa;

@color-mode-height:70px;
@palette-height:45px;
@icon-pad: 13px;
@nav-width: @icon-size + @icon-pad*2;

html,body{
	-ms-content-zooming: none;
	-ms-touch-action:none;
	overflow:hidden; 
	width:100%; 
	height:100%;
	background:@back;
} 
body > div{ position:absolute; }

.left {
	z-index:1;

	top:0; left:0; 
	bottom:@palette-height; 

	& > * { 
		float:left; height:100%;
		position: relative; 
	}

	.nav{
		width:@nav-width; overflow:hidden;
		background: @back; 

		ul{ margin:0 }
		li:hover{ background:@back + #111; }
		li:active{ background:@back + #222; }

		.tools{
			position: absolute; 
			top:0; left:0; 
			bottom:@color-mode-height - @palette-height; 
			overflow:auto; width:200%; 

			li{ padding:10px @icon-pad; cursor:pointer; }
			li.on{ background:@active; }
		} 
	}
}
.palette{
	z-index:1;

	left:@nav-width + 5px; 
	bottom:0; right:0; 
	background: @back;
	height:@palette-height;

	.nocolor{
		.opacity(0.3);
		width:@icon-size;
		padding:(@palette-height - @icon-size)/2;
	}

	ul{
		position:absolute;
		left:45px; top:0; bottom:0; right:0;
		li{ 
			float:left; 
			height:@palette-height; 
		}
	}
}
.color-toggle{
	z-index:2;

	left:0; bottom:0; 
	width:@nav-width + 5px; 
	height:@color-mode-height;
	background:@back;
	cursor:pointer;

	.fill, .stroke{
		position: absolute; 
		width:@icon-size; 
		height:@icon-size;
		border:2px white solid;
		.rounded(5px);

		span{
			.opacity(0.5);
			background-color:black;
		}
	}

	@pad: 7px;
	.fill{ top:@pad; left:@pad; }
	.stroke{ bottom:@pad; right:@pad; }
}
.canvas{
	z-index:10;
	left:@nav-width; right:0;
	top:0; bottom:@palette-height;

	& > svg{
		width:100%; height:100%;
	}
}
@toolbar-hpad:25px;
@toolbar-vpad:7px;
.toolbar-bottom-left{
	z-index:11;

	left:@toolbar-hpad + @nav-width; 
	bottom:@toolbar-vpad + @palette-height;
}
.toolbar-bottom-right{
	z-index:11;

	right:@toolbar-hpad; 
	bottom:@toolbar-vpad + @palette-height;
}
.toolbar-top-right{
	z-index:12;

	right:@toolbar-hpad; 
	top:@toolbar-vpad;
}
.toolbar-top-left{
	z-index:12;

	left:@toolbar-hpad + @nav-width; 
	top:@toolbar-vpad;
}

